tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_18.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((r OR p) & (200 > x)) OR (~ (2 # 200))) & ((+ (y MOD 2)) <= ((0 MOD 200) MOD (- 200))));
               y := ((+ ((1 DIV z) + (0 - 1223))) DIV (- (+ (x - 2))));
               p := (~ (((y - 0) + (z DIV 200)) < ((- 1223) - (1223 - y))));
               z := (- (+ ((- 1) + (1223 MOD 1))));
               q := ((- (- (+ 200))) <= (- ((- 0) - (2 DIV 2))));
               r := (~ (~ ((1223 * 0) = (1223 * 2))));
  (* error *)  z := ((- (- (r DIV 1))) MOD (((z MOD 200) MOD (z - 200)) - (+ (+ 1))));
               q := ((((+ 200) DIV (2 MOD 200)) DIV ((+ 0) DIV (0 DIV z))) >= (((200 - z) DIV (- y)) + (- (y + 200))));
               p := (((+ (+ y)) MOD ((1 - 1223) + (1 MOD x))) = (((0 * z) - (- y)) + ((- 200) DIV (- 1))));
               y := ((((x + x) + (0 + 0)) MOD (+ (z * 1223))) DIV (+ ((x * 1) + (y DIV x))))
END Test17.